# pretalx-plugin-broadcast-tools

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.rst  pyproject.toml  setup.cfg  setup.py
.github/workflows/: release-on-tag.yml  style.yml
pretalx_broadcast_tools/: apps.py  exporter.py  forms.py  signals.py  tasks.py  urls.py  views.py
pretalx_broadcast_tools/assets/: titilium-web-regular.LICENSE
pretalx_broadcast_tools/locale/de_DE/LC_MESSAGES/: django.po
pretalx_broadcast_tools/locale/fr_FR/LC_MESSAGES/: django.po
pretalx_broadcast_tools/management/commands/: export_voctomix_lower_thirds.py
pretalx_broadcast_tools/static/pretalx_broadcast_tools/: frontend.css  frontend_rc3.css  generic.js  lower_thirds.js  room_info.js  room_timer.js  update.js
pretalx_broadcast_tools/templates/pretalx_broadcast_tools/: lower_thirds.html  orga.html  room_info.html  room_timer.html
pretalx_broadcast_tools/utils/: placeholders.py
pretalx_broadcast_tools/views/: event_info.py  orga.py  qr.py  schedule.py  static_html.py  voctomix_export.py
pretalx_lower_thirds/: apps.py  forms.py  signals.py  urls.py  views.py
pretalx_lower_thirds/static/pretalx_lower_thirds/: frontend.css  update.js
pretalx_lower_thirds/templates/pretalx_lower_thirds/: lower_thirds.html  orga.html
