[project]
name = "pretalx-broadcast-tools"
version = "2.0.1"
description = """
Some tools which can be used for supporting a broadcasting software.
This currently includes a generator for PDF printouts, a 'lower thirds'
endpoint, and a full-screen webpage showing information about the
currently running talk.
"""
readme = "README.rst"
license = {text = "Apache Software License"}
keywords = ["pretalx"]
authors = [
    {name = "Franziska Kunsmann", email = "git@kunsmann.eu"},
]
maintainers = [
    {name = "Franziska Kunsmann", email = "git@kunsmann.eu"},
]

dependencies = [
]

[project.entry-points."pretalx.plugin"]
pretalx_broadcast_tools = "pretalx_broadcast_tools:PretalxPluginMeta"

[build-system]
requires = [
    "setuptools",
]

[project.urls]
homepage = "https://github.com/Kunsi/pretalx-plugin-broadcast-tools"
repository = "https://github.com/Kunsi/pretalx-plugin-broadcast-tools.git"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["pretalx*"]
